--- a/Runtime/GenericScriptableObjects.asmdef
+++ b/Runtime/GenericScriptableObjects.asmdef
@@ -2,7 +2,8 @@
     "name": "GenericScriptableObjects",
     "rootNamespace": "GenericScriptableObjects",
     "references": [
-        "GUID:ea6a6314f279f814facc8c48a7d3c9f1"
+        "GUID:ea6a6314f279f814facc8c48a7d3c9f1",
+        "GUID:b73ef07971851e14fa74ae50b76f8225"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
