Added a usage example

--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
   "author": {
     "name": "SolidAlloy",
     "url": "https://github.com/SolidAlloy/"
-  }
+  },
+  "samples": [
+    {
+      "displayName": "Usage Example",
+      "description": "A scene that shows how generic scriptable objects can be implemented and used",
+      "path": "Samples~/Usage Example"
+    }
+  ]
 }
