--- a/package.json
+++ b/package.json
@@ -2,18 +2,16 @@
   "name": "com.solidalloy.generic-scriptable-objects",
   "version": "1.0.0",
   "displayName": "Generic ScriptableObjects",
-  "description": "Generic ScriptableObjects.",
+  "description": "A plugin that allows to implement generic scriptable objects, create assets from them, and instantiate them at runtime.",
   "dependencies": {
     "com.solidalloy.util": "1.14.0",
-	"com.solidalloy.type.references": "2.5.0"
+	"com.solidalloy.type.references": "2.6.0"
   },
   "keywords": [
     "scriptable",
     "object",
     "ScriptableObject",
     "generic",
-    "utility",
-    "util"
   ],
   "author": {
     "name": "SolidAlloy",
