refactor: Moved classes to the appropriate namespaces

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "scriptable",
     "object",
     "ScriptableObject",
-    "generic",
+    "generic"
   ],
   "author": {
     "name": "SolidAlloy",
