Completed the GenericObjectField method
Object picker filters types propertly and the type name is shown correctly. Apparently, object picker works just like AssetDatabase filter and filter by type name, so a unique name for each concrete class was required. Assembly GUID doesn't change if the type is updated, so it was the best option for naming the concrete class

--- a/Editor/GenericUnityObjects.Editor.asmdef
+++ b/Editor/GenericUnityObjects.Editor.asmdef
@@ -13,8 +13,11 @@
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "GenericUnityEditorInternals.dll",
+        "UnityEditorInternals.dll"
+    ],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
