Fixed a bug with object fields incorrectly showing generic argument of a type
Stopped caching generic types and started fetching the real generic type of a property directly every frame. The performance cost is minimal. Unfortunately, SerializedProperty doesn't contain any mention of generic argument of a type, so it's not possible to shortcut there.

--- a/GenericUnityInternals~/GenericUnityEditorInternals/GenericUnityEditorInternals.csproj
+++ b/GenericUnityInternals~/GenericUnityEditorInternals/GenericUnityEditorInternals.csproj
@@ -54,7 +54,7 @@
     <ItemGroup>
         <Compile Include="EditorGUIHelper.cs" />
         <Compile Include="GenericObjectInternalEditor.cs" />
-        <Compile Include="GenericTypeCache.cs" />
+        <Compile Include="GenericTypeHelper.cs" />
         <Compile Include="ObjectSelectorExtensions.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
