Started using extended MonoImporterInspector that supports generic unity.objects

--- a/GenericUnityInternals~/GenericUnityEditorInternals/GenericUnityEditorInternals.csproj
+++ b/GenericUnityInternals~/GenericUnityEditorInternals/GenericUnityEditorInternals.csproj
@@ -38,40 +38,33 @@
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Xml" />
-        <Reference Include="UnityEditor">
-          <HintPath>C:\Program Files\Unity Editors\2020.2.2f1\Editor\Data\Managed\UnityEditor.dll</HintPath>
-        </Reference>
-        <Reference Include="UnityEngine">
-            <HintPath>C:\Program Files\Unity Editors\2020.2.2f1\Editor\Data\Managed\UnityEngine.dll</HintPath>
-        </Reference>
         <Reference Include="UnityEngine.CoreModule">
             <HintPath>C:\Program Files\Unity Editors\2020.2.2f1\Editor\Data\Managed\UnityEngine\UnityEngine.CoreModule.dll</HintPath>
-            <Aliases>UnityEngineCore</Aliases>
         </Reference>
         <Reference Include="UnityEditor.CoreModule">
             <HintPath>c:\Program Files\Unity Editors\2020.2.2f1\Editor\Data\Managed\UnityEngine\UnityEditor.CoreModule.dll</HintPath>
-            <Aliases>UnityEditorCore</Aliases>
         </Reference>
         <Reference Include="UnityEngine.IMGUIModule">
             <HintPath>c:\Program Files\Unity Editors\2020.2.2f1\Editor\Data\Managed\UnityEngine\UnityEngine.IMGUIModule.dll</HintPath>
-            <Aliases>IMGUIModule</Aliases>
         </Reference>
         <Reference Include="GenericUnityObjects">
             <HintPath>..\..\..\..\Library\ScriptAssemblies\GenericUnityObjects.dll</HintPath>
         </Reference>
-        <Reference Include="SolidUtilities.Editor">
-            <HintPath>..\..\..\..\Library\ScriptAssemblies\SolidUtilities.Editor.dll</HintPath>
-        </Reference>
         <Reference Include="SolidUtilities">
             <HintPath>..\..\..\..\Library\ScriptAssemblies\SolidUtilities.dll</HintPath>
+        </Reference>
+        <Reference Include="SolidUtilities.Editor">
+            <HintPath>..\..\..\..\Library\ScriptAssemblies\SolidUtilities.Editor.dll</HintPath>
         </Reference>
     </ItemGroup>
     <ItemGroup>
         <Compile Include="AssemblyInfo.cs" />
         <Compile Include="EditorGUIHelper.cs" />
-        <Compile Include="InternalMonoImporterEditor.cs" />
+        <Compile Include="EditorGUILayoutHelper.cs" />
+        <Compile Include="GenericMonoImporterInspector.cs" />
         <Compile Include="GenericObjectInternalEditor.cs" />
         <Compile Include="GenericTypeHelper.cs" />
+        <Compile Include="ObjectFieldHelper.cs" />
         <Compile Include="ObjectSelectorExtensions.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
