fix: Fixed the missing dependency caused by SolidUtilities update

--- a/Editor/GenericUnityObjects.Editor.asmdef
+++ b/Editor/GenericUnityObjects.Editor.asmdef
@@ -16,7 +16,7 @@
     "overrideReferences": true,
     "precompiledReferences": [
         "GenericUnityEditorInternals.dll",
-        "UnityEditorInternals.dll"
+        "UnityEditorInternals2020.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
