wip: Added GenericUnityEventDrawer with a copy of the DrawEvent method

--- a/GenericUnityInternals~/GenericUnityEditorInternals/GenericUnityEditorInternals.csproj
+++ b/GenericUnityInternals~/GenericUnityEditorInternals/GenericUnityEditorInternals.csproj
@@ -63,6 +63,7 @@
         <Compile Include="GenericMonoImporterInspector.cs" />
         <Compile Include="GenericHeaderEditor.cs" />
         <Compile Include="GenericTypeHelper.cs" />
+        <Compile Include="GenericUnityEventDrawer.cs" />
         <Compile Include="ObjectFieldHelper.cs" />
         <Compile Include="ObjectSelectorExtensions.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
