fix: Replaced the broken dependency dll
Due to the update in SolidUtilities, the name of the DLL changed.

--- a/Editor/GenericUnityObjects.Editor.asmdef
+++ b/Editor/GenericUnityObjects.Editor.asmdef
@@ -16,7 +16,7 @@
     "overrideReferences": true,
     "precompiledReferences": [
         "GenericUnityEditorInternals.dll",
-        "UnityEditorInternals2020.dll"
+        "UnityEditorInternals.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
