--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A plugin that allows using of generic scriptable objects and monobehaviours, creating assets and components from them, and instantiating them at runtime.",
   "dependencies": {
     "com.solidalloy.util": "1.29.0",
-    "com.solidalloy.type-references": "2.9.0"
+    "com.solidalloy.type-references": "2.9.0",
+	"com.cysharp.unitask": "2.2.5"
   },
   "keywords": [
     "scriptable",
