fix: Added TEST_FRAMEWORK define symbol to unity test assemblies
To fix compilation errors if the Test Framework plugin is not installed.

--- a/Tests/Integration/GenericUnityObjects.IntegrationTests.asmdef
+++ b/Tests/Integration/GenericUnityObjects.IntegrationTests.asmdef
@@ -17,8 +17,15 @@
     ],
     "autoReferenced": false,
     "defineConstraints": [
-        "UNITY_INCLUDE_TESTS"
+        "UNITY_INCLUDE_TESTS",
+        "TEST_FRAMEWORK"
     ],
-    "versionDefines": [],
+	"versionDefines": [
+        {
+            "name": "com.unity.test-framework",
+            "expression": "",
+            "define": "TEST_FRAMEWORK"
+        }
+    ],
     "noEngineReferences": false
 }
