--- a/Tests/Editor/GenericUnityObjects.EditorTests.asmdef
+++ b/Tests/Editor/GenericUnityObjects.EditorTests.asmdef
@@ -14,13 +14,20 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
-	"precompiledReferences": [
+    "precompiledReferences": [
         "nunit.framework.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
-        "UNITY_INCLUDE_TESTS"
+        "UNITY_INCLUDE_TESTS",
+        "TEST_FRAMEWORK"
     ],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.test-framework",
+            "expression": "",
+            "define": "TEST_FRAMEWORK"
+        }
+    ],
     "noEngineReferences": false
 }
