fix: Fixed long delay before the interactive creation of a scriptable object

--- a/Editor/GenericUnityObjects.Editor.asmdef
+++ b/Editor/GenericUnityObjects.Editor.asmdef
@@ -6,8 +6,7 @@
         "TypeReferences.Editor",
         "GenericUnityObjects",
         "TypeReferences",
-        "SolidUtilities",
-        "UniTask"
+        "SolidUtilities"
     ],
     "includePlatforms": [
         "Editor"
