--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "A plugin that allows using of generic scriptable objects and monobehaviours, creating assets and components from them, and instantiating them at runtime.",
   "dependencies": {
     "com.solidalloy.util": "1.30.0",
-    "com.solidalloy.type-references": "2.9.0",
-    "com.cysharp.unitask": "2.2.5"
+    "com.solidalloy.type-references": "2.9.0"
   },
   "keywords": [
     "scriptable",
