feat: Started drawing easy buttons in generic unityobjects inspectors if the package is installed

--- a/Editor/GenericUnityObjects.Editor.asmdef
+++ b/Editor/GenericUnityObjects.Editor.asmdef
@@ -6,7 +6,8 @@
         "TypeReferences.Editor",
         "GenericUnityObjects",
         "TypeReferences",
-        "SolidUtilities"
+        "SolidUtilities",
+        "EasyButtons.Editor"
     ],
     "includePlatforms": [
         "Editor"
@@ -21,6 +22,12 @@
     ],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.madsbangh.easybuttons",
+            "expression": "",
+            "define": "EASY_BUTTONS"
+        }
+    ],
     "noEngineReferences": false
 }
