feat: Added a checkbox in project settings allowing to put the + button next to all GenericScriptableObject fields regardless of the Creatable attribute

--- a/Editor/GenericUnityObjects.Editor.asmdef
+++ b/Editor/GenericUnityObjects.Editor.asmdef
@@ -7,7 +7,8 @@
         "GenericUnityObjects",
         "TypeReferences",
         "SolidUtilities",
-        "EasyButtons.Editor"
+        "EasyButtons.Editor",
+        "Unity.Settings.Editor"
     ],
     "includePlatforms": [
         "Editor"
