--- a/.GenericUnityInternals/GenericUnityEditorInternals/GenericUnityEditorInternals.csproj
+++ b/.GenericUnityInternals/GenericUnityEditorInternals/GenericUnityEditorInternals.csproj
@@ -4,14 +4,14 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{B02F9AC3-C24A-4578-B743-FD8E9287EBD1}</ProjectGuid>
+        <ProjectGuid>{9C80D148-E76D-44E7-87A1-7A59579519E8}</ProjectGuid>
         <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>OdinInternals</RootNamespace>
-        <AssemblyName>OdinInternals</AssemblyName>
+        <RootNamespace>GenericUnityObjects.UnityEditorInternals</RootNamespace>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <_OutputCopyLocation>..\..\</_OutputCopyLocation>
+        <LangVersion>8</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -22,6 +22,7 @@
         <DefineConstants>DEBUG;TRACE</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
+        <AssemblyName>Unity.InternalAPIEditorBridgeDev.003</AssemblyName>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,46 +32,42 @@
         <DefineConstants>TRACE</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
+        <AssemblyName>GenericUnityEditorInternals</AssemblyName>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="GenericUnityObjects, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\Library\ScriptAssemblies\GenericUnityObjects.dll</HintPath>
-        </Reference>
-        <Reference Include="GenericUnityObjects.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\..\Library\ScriptAssemblies\GenericUnityObjects.Editor.dll</HintPath>
-        </Reference>
-        <Reference Include="Sirenix.OdinInspector.Editor">
-          <HintPath>..\..\..\..\Assets\Plugins\Sirenix\Assemblies\Sirenix.OdinInspector.Editor.dll</HintPath>
-        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Xml" />
-        <Reference Include="UnityEditor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>c:\Program Files\Unity Editors\2021.1.9f1\Editor\Data\Managed\UnityEngine\UnityEditor.dll</HintPath>
+        <Reference Include="UnityEngine.CoreModule">
+            <HintPath>C:\Program Files\Unity Editors\2021.1.22f1\Editor\Data\Managed\UnityEngine\UnityEngine.CoreModule.dll</HintPath>
         </Reference>
-        <Reference Include="UnityEditor.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>c:\Program Files\Unity Editors\2021.1.9f1\Editor\Data\Managed\UnityEngine\UnityEditor.CoreModule.dll</HintPath>
+        <Reference Include="UnityEditor.CoreModule">
+            <HintPath>c:\Program Files\Unity Editors\2021.1.22f1\Editor\Data\Managed\UnityEngine\UnityEditor.CoreModule.dll</HintPath>
         </Reference>
-        <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>c:\Program Files\Unity Editors\2021.1.9f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
-          <Aliases>NonSplit</Aliases>
+        <Reference Include="UnityEngine.IMGUIModule">
+            <HintPath>c:\Program Files\Unity Editors\2021.1.22f1\Editor\Data\Managed\UnityEngine\UnityEngine.IMGUIModule.dll</HintPath>
         </Reference>
-        <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>c:\Program Files\Unity Editors\2021.1.9f1\Editor\Data\Managed\UnityEngine\UnityEngine.CoreModule.dll</HintPath>
+        <Reference Include="GenericUnityObjects">
+            <HintPath>..\..\..\..\Library\ScriptAssemblies\GenericUnityObjects.dll</HintPath>
         </Reference>
-        <Reference Include="UnityEngine.IMGUIModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>c:\Program Files\Unity Editors\2021.1.9f1\Editor\Data\Managed\UnityEngine\UnityEngine.IMGUIModule.dll</HintPath>
+        <Reference Include="SolidUtilities">
+            <HintPath>..\..\..\..\Library\ScriptAssemblies\SolidUtilities.dll</HintPath>
+        </Reference>
+        <Reference Include="SolidUtilities.Editor">
+            <HintPath>..\..\..\..\Library\ScriptAssemblies\SolidUtilities.Editor.dll</HintPath>
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="GenericUnityEventDrawer`1.cs" />
+        <Compile Include="EditorGUIHelper.cs" />
+        <Compile Include="EditorGUILayoutHelper.cs" />
+        <Compile Include="GenericMonoImporterInspector.cs" />
+        <Compile Include="GenericHeaderEditor.cs" />
+        <Compile Include="GenericTypeHelper.cs" />
+        <Compile Include="GenericUnityEventDrawer.cs" />
+        <Compile Include="ObjectFieldHelper.cs" />
+        <Compile Include="ObjectSelectorExtensions.cs" />
+        <Compile Include="ObjectSelectorHelper.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-    </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\GenericUnityEditorInternals\GenericUnityEditorInternals.csproj">
-        <Project>{9c80d148-e76d-44e7-87a1-7a59579519e8}</Project>
-        <Name>GenericUnityEditorInternals</Name>
-      </ProjectReference>
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="OpenSesame.Net.Compilers.Toolset" Version="3.7.0">
@@ -87,8 +84,8 @@
     </Target>
     -->
     <Target Name="AfterBuild">
-        <ItemGroup> <_FilesToCopy Include="$(OutputPath)$(AssemblyName).dll" /> </ItemGroup>
-        <Copy SourceFiles="@(_FilesToCopy)" DestinationFiles="@(_FilesToCopy->'$(_OutputCopyLocation)%(RecursiveDir)$(AssemblyName)%(Extension)')" />
+        <ItemGroup> <_FilesToCopy Include="$(OutputPath)$(AssemblyName).*" /> </ItemGroup>
+        <Copy SourceFiles="@(_FilesToCopy)" DestinationFiles="@(_FilesToCopy->'$(_OutputCopyLocation)%(RecursiveDir)GenericUnityEditorInternals%(Extension)')" />
     </Target>
 
 </Project>
