Applied changes to namespaces from SolidUtilties

--- a/Editor/GenericUnityObjects.Editor.asmdef
+++ b/Editor/GenericUnityObjects.Editor.asmdef
@@ -8,7 +8,8 @@
         "TypeReferences",
         "SolidUtilities",
         "EasyButtons.Editor",
-        "Unity.Settings.Editor"
+        "Unity.Settings.Editor",
+        "UnityDropdown.Editor"
     ],
     "includePlatforms": [
         "Editor"
