fix: Fixed not working custom editor for generic MonoBehaviours with new versions of Odin Inspector

--- a/Editor/GenericUnityObjects.Editor.asmdef
+++ b/Editor/GenericUnityObjects.Editor.asmdef
@@ -20,7 +20,9 @@
     "precompiledReferences": [
         "GenericUnityEditorInternals.dll",
         "UnityEditorInternals.dll",
-        "Sirenix.OdinInspector.Editor.dll"
+        "Sirenix.OdinInspector.Editor.dll",
+        "Sirenix.Utilities.dll",
+        "Sirenix.OdinInspector.Attributes.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
