feat: Added integration with MissingScriptType
- added integration with the new MissingScriptType package
- refactored custom editors: changed inheritance, remade GenericHeaderEditor into GenericHeaderUtility
- moved some code to SolidUtilities so that it can be used in MissingScriptType

--- a/Editor/GenericUnityObjects.Editor.asmdef
+++ b/Editor/GenericUnityObjects.Editor.asmdef
@@ -9,7 +9,8 @@
         "SolidUtilities",
         "EasyButtons.Editor",
         "Unity.Settings.Editor",
-        "UnityDropdown.Editor"
+        "UnityDropdown.Editor",
+        "MissingScriptType.Editor"
     ],
     "includePlatforms": [
         "Editor"
@@ -31,6 +32,11 @@
             "name": "com.madsbangh.easybuttons",
             "expression": "",
             "define": "EASY_BUTTONS"
+        },
+        {
+            "name": "com.solidalloy.missing-script-type",
+            "expression": "",
+            "define": "MISSING_SCRIPT_TYPE"
         }
     ],
     "noEngineReferences": false
