--- a/Runtime/GenericUnityObjects.asmdef
+++ b/Runtime/GenericUnityObjects.asmdef
@@ -2,9 +2,9 @@
     "name": "GenericUnityObjects",
     "rootNamespace": "GenericUnityObjects",
     "references": [
-        "GUID:ea6a6314f279f814facc8c48a7d3c9f1",
-        "GUID:b73ef07971851e14fa74ae50b76f8225",
-        "GUID:48d58eaab94e1de429344393b7653b1f"
+        "TypeReferences",
+        "SolidUtilities",
+        "SolidUtilities.Editor"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
