feat: Implemented Creatable attribute for generic MonoBehaviours

--- a/Editor/GenericUnityObjects.Editor.asmdef
+++ b/Editor/GenericUnityObjects.Editor.asmdef
@@ -10,7 +10,8 @@
         "EasyButtons.Editor",
         "Unity.Settings.Editor",
         "UnityDropdown.Editor",
-        "MissingScriptType.Editor"
+        "MissingScriptType.Editor",
+        "ExtEvents"
     ],
     "includePlatforms": [
         "Editor"
